Most basic functionality
- Can now add hosts, and they're removed when the connection is closed,
  or at shutdown
- Automatically exits when nobody is connected
- Cleans up stray localname entries at startup (e.g. if the machine was
  shut down uncleanly).

--- a/us.sidnicio.localnamed.plist
+++ b/us.sidnicio.localnamed.plist
@@ -6,6 +6,8 @@
 	<string>us.sidnicio.localnamed</string>
 	<key>Program</key>
 	<string>/usr/libexec/localnamed</string>
+	<key>EnableTransactions</key>
+	<false/>
 	<key>Sockets</key>
 	<dict>
 		<key>localnamed</key>
