--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "deps/team"]
+	path = deps/team
+	url = git://github.com/Sidnicious/team.git
 [submodule "deps/uv"]
 	path = deps/uv
 	url = git://github.com/libuv/libuv.git
